Connect FLUX 3 Video to Kadan video jobs
